@@ -177,6 +177,8 @@
 
 	Fixed F, f, ; and , keys in visual mode.
 
+	Fixed detection of too-small-terminal state.
+
 0.8.2-beta to 0.8.2
 
 	Added support for matchit to filetype plugin.  Patch by filterfalse.
